# SFRAT.cpp

./: .gitignore  CMakeLists.txt  README.md
include/models/: FTModel.h  Model.h
include/models/GO/: GO.h
include/models/MO/: MO.h
src/: main.cxx
src/models/: CMakeLists.txt  FTModel.cxx  Model.cxx
src/models/GO/: GO.cxx
src/models/MO/: MO.cxx
